add more features :zap:

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,6 @@ spring.datasource.hikari.idle-timeout=300000
 server.port=8081
 
 # Logging
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
