--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=cv-builder-api
 
-
-
 # Database Connection
 spring.datasource.url=jdbc:postgresql://localhost:5433/cvbuilder
 spring.datasource.username=postgres
@@ -11,18 +9,19 @@ spring.datasource.password=admin@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Correct Hibernate Dialect for PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Connection Pool
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.idle-timeout=300000
-
+#spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.connection-timeout=20000
+#spring.datasource.hikari.idle-timeout=300000
 
 # Port
 server.port=8081
 
 # Logging
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
