--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,102 +1,52 @@
-name: CI/CD Pipeline
+version: '3.8'
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+services:
+  postgres:
+    image: postgres:13
+    container_name: postgres
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+  cv-builder-api:
+    build: .
+    container_name: cv-builder-api
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB}
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_SHOW_SQL: "false"
+      SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: "false"
+      SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE: 10
+      SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT: 20000
+      SPRING_DATASOURCE_HIKARI_IDLE_TIMEOUT: 300000
+      SERVER_PORT: 8081
+      SPRING_APP_JWTSECRET: ${JWT_SECRET}
+      SPRING_APP_JWTEXPIRATIONMS: ${JWT_EXPIRATION_MS}
+      SPRING_ECOM_APP_JWTCOOKIENAME: ${JWT_COOKIE_NAME}
+      FRONTEND_URL: http://localhost:5173/
+      IMAGE_BASE_URL: http://localhost:8080/images
+      CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_NAME}
+      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
+      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
+      SPRING_MAIL_HOST: ${MAIL_HOST}
+      SPRING_MAIL_PORT: ${MAIL_PORT}
+      SPRING_MAIL_USERNAME: ${MAIL_USERNAME}
+      SPRING_MAIL_PASSWORD: ${MAIL_PASSWORD}
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: "true"
+      SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: "true"
+      SPRINGDOC_API_DOCS_PATH: /v3/api-docs
+      SPRINGDOC_SWAGGER_UI_PATH: /swagger-ui.html
+    ports:
+      - "0:8081"
+    depends_on:
+      - postgres
 
-    env:
-      POSTGRES_DB: ${{ env.POSTGRES_DB }}
-      POSTGRES_USER: ${{ env.POSTGRES_USER }}
-      POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-
-    services:
-      postgres:
-        image: postgres:13
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_DB: ${{ env.POSTGRES_DB }}
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-        options: >-
-          --health-cmd "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Build and tag Docker image
-        run: |
-          docker buildx build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache --tag cv-builder-api:latest .
-          docker tag cv-builder-api:latest ${{ secrets.DOCKER_USERNAME }}/cv-builder-api:latest
-
-      - name: Run Docker Compose
-        run: docker-compose up -d
-
-      - name: Test the application
-        run: docker-compose exec cv-builder-api mvn test
-
-      - name: Archive test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: target/surefire-reports/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    env:
-      DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ env.DOCKER_PASSWORD }}
-      DEPLOY_USER: ${{ env.DEPLOY_USER }}
-      DEPLOY_HOST: ${{ env.DEPLOY_HOST }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        run: |
-          docker buildx build --tag ${{ env.DOCKER_USERNAME }}/cv-builder-api:latest --push .
-
-      - name: Deploy to server
-        run: |
-          ssh -o StrictHostKeyChecking=no $DEPLOY_USER@$DEPLOY_HOST << 'EOF'
-          docker pull ${{ env.DOCKER_USERNAME }}/cv-builder-api:latest
-          docker stop cv-builder-api || true
-          docker rm cv-builder-api || true
-          docker run -d -p 8081:8081 --name cv-builder-api ${{ env.DOCKER_USERNAME }}/cv-builder-api:latest
-          EOF
+volumes:
+  postgres_data:
