--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,11 +18,11 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRES_DB: ${{ env.POSTGRES_DB }}
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{POSTGRES_DB }}
+          POSTGRES_USER: ${{ POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ POSTGRES_PASSWORD }}
         options: >-
-          --health-cmd "pg_isready -U ${{ env.POSTGRES_USER }} -d ${{ env.POSTGRES_DB }}"
+          --health-cmd "pg_isready -U ${{ POSTGRES_USER }} -d ${{ POSTGRES_DB }}"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -45,7 +45,7 @@ jobs:
       - name: Build and tag Docker image
         run: |
           docker buildx build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache --tag cv-builder-api:latest .
-          docker tag cv-builder-api:latest ${{ env.DOCKER_USERNAME }}/cv-builder-api:latest
+          docker tag cv-builder-api:latest ${{ DOCKER_USERNAME }}/cv-builder-api:latest
 
       - name: Run Docker Compose
         run: docker-compose up -d
@@ -74,18 +74,18 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}
+          username: ${{ DOCKER_USERNAME }}
+          password: ${{ DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         run: |
-          docker buildx build --tag ${{ env.DOCKER_USERNAME }}/cv-builder-api:latest --push .
+          docker buildx build --tag ${{ DOCKER_USERNAME }}/cv-builder-api:latest --push .
 
       - name: Deploy to server
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ env.DEPLOY_USER }}@${{ env.DEPLOY_HOST }} << 'EOF'
-          docker pull ${{ env.DOCKER_USERNAME }}/cv-builder-api:latest
+          ssh -o StrictHostKeyChecking=no ${{ DEPLOY_USER }}@${{ DEPLOY_HOST }} << 'EOF'
+          docker pull ${{ DOCKER_USERNAME }}/cv-builder-api:latest
           docker stop cv-builder-api || true
           docker rm cv-builder-api || true
-          docker run -d -p 8081:8081 --name cv-builder-api ${{ env.DOCKER_USERNAME }}/cv-builder-api:latest
+          docker run -d -p 8081:8081 --name cv-builder-api ${{ DOCKER_USERNAME }}/cv-builder-api:latest
           EOF
