--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,6 +16,16 @@ jobs:
       POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
       POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      JWT_EXPIRATION_MS: ${{ secrets.JWT_EXPIRATION_MS }}
+      JWT_COOKIE_NAME: ${{ secrets.JWT_COOKIE_NAME }}
+      CLOUDINARY_NAME: ${{ secrets.CLOUDINARY_NAME }}
+      CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY }}
+      CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET }}
+      MAIL_HOST: ${{ secrets.MAIL_HOST }}
+      MAIL_PORT: ${{ secrets.MAIL_PORT }}
+      MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+      MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
 
     services:
       postgres:
@@ -36,6 +46,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '21'
+          cache: 'maven'
+
+      - name: Run tests with Maven
+        run: mvn test
+
+      - name: Archive test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: target/surefire-reports/
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -54,20 +81,25 @@ jobs:
         run: |
           docker buildx build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache --tag ${{ secrets.DOCKER_USERNAME }}/cv-builder-api:latest --load .
 
-      # Use Docker Compose V2 command syntax
       - name: Run Docker Compose
         run: docker compose up -d
 
-      # Use Docker Compose V2 command syntax
-      - name: Test the application
-        run: docker compose exec -T cv-builder-api mvn test
-
-      - name: Archive test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: target/surefire-reports/
+      - name: Verify application is running
+        run: |
+          # Wait for the application to start (adjust the sleep time as needed)
+          sleep 30
+          # Use curl to check if the application is responding
+          # Replace the URL with the appropriate health check endpoint
+          docker ps
+          CONTAINER_PORT=$(docker port cv-builder-api 8081)
+          if [ -z "$CONTAINER_PORT" ]; then
+            echo "Failed to get container port mapping"
+            exit 1
+          fi
+          echo "Application is available at: $CONTAINER_PORT"
+          # Extract just the port number from the mapping
+          PORT_NUMBER=$(echo $CONTAINER_PORT | sed 's/.*://')
+          curl -f http://localhost:$PORT_NUMBER/actuator/health || exit 1
 
   deploy:
     runs-on: ubuntu-latest
@@ -86,6 +118,17 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
+      - name: Set up cache directory
+        run: mkdir -p /tmp/.buildx-cache
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -113,5 +156,24 @@ jobs:
           docker pull ${{ secrets.DOCKER_USERNAME }}/cv-builder-api:latest
           docker stop cv-builder-api || true
           docker rm cv-builder-api || true
-          docker run -d -p 8081:8081 --name cv-builder-api ${{ secrets.DOCKER_USERNAME }}/cv-builder-api:latest
+          docker run -d -p 8081:8081 --name cv-builder-api \
+            -e SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/${POSTGRES_DB} \
+            -e SPRING_DATASOURCE_USERNAME=${POSTGRES_USER} \
+            -e SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD} \
+            -e SPRING_JPA_HIBERNATE_DDL_AUTO=update \
+            -e SPRING_APP_JWTSECRET=${JWT_SECRET} \
+            -e SPRING_APP_JWTEXPIRATIONMS=${JWT_EXPIRATION_MS} \
+            -e SPRING_ECOM_APP_JWTCOOKIENAME=${JWT_COOKIE_NAME} \
+            -e FRONTEND_URL=https://your-production-frontend-url.com \
+            -e IMAGE_BASE_URL=https://your-production-api-url.com/images \
+            -e CLOUDINARY_CLOUD_NAME=${CLOUDINARY_NAME} \
+            -e CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY} \
+            -e CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET} \
+            -e SPRING_MAIL_HOST=${MAIL_HOST} \
+            -e SPRING_MAIL_PORT=${MAIL_PORT} \
+            -e SPRING_MAIL_USERNAME=${MAIL_USERNAME} \
+            -e SPRING_MAIL_PASSWORD=${MAIL_PASSWORD} \
+            -e SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH=true \
+            -e SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE=true \
+            ${{ secrets.DOCKER_USERNAME }}/cv-builder-api:latest
           EOF
