Add GitHub Actions CI/CD pipeline and Docker configuration :joy;

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,6 +17,8 @@ jobs:
       POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      POSTGRES_PORT: ${{ POSTGRES_PORT }}
+      POSTGRES_HOST: ${{ POSTGRES_HOST }}
       JWT_EXPIRATION_MS: ${{ secrets.JWT_EXPIRATION_MS }}
       JWT_COOKIE_NAME: ${{ secrets.JWT_COOKIE_NAME }}
       CLOUDINARY_NAME: ${{ secrets.CLOUDINARY_NAME }}
@@ -36,6 +38,8 @@ jobs:
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_PORT: ${{ POSTGRES_PORT }}
+          POSTGRES_HOST: ${{ POSTGRES_HOST }}
         options: >-
           --health-cmd "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
           --health-interval 10s
@@ -157,7 +161,7 @@ jobs:
           docker stop cv-builder-api || true
           docker rm cv-builder-api || true
           docker run -d -p 8081:8081 --name cv-builder-api \
-            -e SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/${POSTGRES_DB} \
+            -e SPRING_DATASOURCE_URL=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB} \
             -e SPRING_DATASOURCE_USERNAME=${POSTGRES_USER} \
             -e SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD} \
             -e SPRING_JPA_HIBERNATE_DDL_AUTO=update \
