--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -169,6 +169,8 @@ jobs:
             -e SPRING_APP_JWTEXPIRATIONMS=${JWT_EXPIRATION_MS} \
             -e SPRING_ECOM_APP_JWTCOOKIENAME=${JWT_COOKIE_NAME} \
             -e FRONTEND_URL=https://your-production-frontend-url.com \
+            -e POSTGRES_HOST=${POSTGRES_HOST} \
+            -e POSTGRES_PORT=${POSTGRES_PORT} \
             -e IMAGE_BASE_URL=https://your-production-api-url.com/images \
             -e CLOUDINARY_CLOUD_NAME=${CLOUDINARY_NAME} \
             -e CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY} \
