--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -147,7 +147,7 @@ jobs:
           docker stop cv-builder-api || true
           docker rm cv-builder-api || true
           docker run -d -p 8081:8081 --name cv-builder-api \
-            -e SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/${{ secrets.POSTGRES_DB }} \
+            -e SPRING_DATASOURCE_URL=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB} \
             -e SPRING_DATASOURCE_USERNAME=${{ secrets.POSTGRES_USER }} \
             -e SPRING_DATASOURCE_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
             -e SPRING_JPA_HIBERNATE_DDL_AUTO=update \
